* Added Factory-based entity initialisation. * Cleaned up main
Signed-off-by: Seung 'Juicebox360' Hahm <logarithmmm@gmail.com>

--- a/SilverOrgn.cbp
+++ b/SilverOrgn.cbp
@@ -50,33 +50,64 @@
 			<Add directory="C:\MinGW\lib" />
 			<Add directory="C:\MinGW\bin" />
 		</Linker>
-		<Unit filename="CSStrip.png" />
 		<Unit filename="fonts\04_BITMAP.TTF" />
 		<Unit filename="fonts\sauce8bit.ttf" />
-		<Unit filename="include\InfoSheet.h" />
-		<Unit filename="include\ent\Entity.h" />
-		<Unit filename="include\ent\EntityController.h" />
-		<Unit filename="include\gfx\AnimatedSprite.h" />
-		<Unit filename="include\gfx\Sprite.h" />
-		<Unit filename="include\sys\Supervisor.h" />
-		<Unit filename="include\test.h" />
+		<Unit filename="include\gfx\fnt\Font.h" />
+		<Unit filename="include\gfx\fnt\FontController.h" />
+		<Unit filename="include\gfx\spr\AnimatedSprite.h" />
+		<Unit filename="include\gfx\spr\Sprite.h" />
 		<Unit filename="include\util\Colour.h" />
 		<Unit filename="include\util\Constants.h" />
+		<Unit filename="include\util\MacroRepeat.h" />
+		<Unit filename="include\util\ObjectFactory.h" />
 		<Unit filename="include\util\Utils.h" />
 		<Unit filename="include\util\Vector2d.h" />
-		<Unit filename="sheets.png" />
-		<Unit filename="src\InfoSheet.cpp" />
-		<Unit filename="src\ent\Entity.cpp" />
-		<Unit filename="src\ent\EntityController.cpp" />
-		<Unit filename="src\gfx\AnimatedSprite.cpp" />
-		<Unit filename="src\gfx\Sprite.cpp" />
+		<Unit filename="include\world\World.h" />
+		<Unit filename="include\world\ent\Entity.h" />
+		<Unit filename="include\world\ent\EntityController.h" />
+		<Unit filename="include\world\ent\EntityEnums.h" />
+		<Unit filename="include\world\ent\act\Actor.h" />
+		<Unit filename="include\world\ent\act\char\Healer.h" />
+		<Unit filename="include\world\ent\act\char\Rocketman.h" />
+		<Unit filename="include\world\ent\act\char\Runner.h" />
+		<Unit filename="sprites\class\CSStrip.png" />
+		<Unit filename="sprites\class\DemomanStrip.png" />
+		<Unit filename="sprites\class\EngineerStrip.png" />
+		<Unit filename="sprites\class\HeavyStrip.png" />
+		<Unit filename="sprites\class\MedicStrip.png" />
+		<Unit filename="sprites\class\PyroStrip.png" />
+		<Unit filename="sprites\class\ScoutStrip.png" />
+		<Unit filename="sprites\class\SniperStrip.png" />
+		<Unit filename="sprites\class\SoldierStrip.png" />
+		<Unit filename="sprites\class\SpyStrip.png" />
+		<Unit filename="sprites\class\special\SandvichStrip.png" />
+		<Unit filename="sprites\class\taunt\DemoTauntStrip.png" />
+		<Unit filename="sprites\class\taunt\EngiTauntStrip.png" />
+		<Unit filename="sprites\class\taunt\HeavyTauntStrip.png" />
+		<Unit filename="sprites\class\taunt\MedicTauntStrip.png" />
+		<Unit filename="sprites\class\taunt\PyroTauntStrip.png" />
+		<Unit filename="sprites\class\taunt\QuoteTauntStrip.png" />
+		<Unit filename="sprites\class\taunt\ScoutTauntStrip.png" />
+		<Unit filename="sprites\class\taunt\SniperTauntStrip.png" />
+		<Unit filename="sprites\class\taunt\SoldierTauntStrip.png" />
+		<Unit filename="sprites\class\taunt\SpyTauntStrip.png" />
+		<Unit filename="src\gfx\fnt\Font.cpp" />
+		<Unit filename="src\gfx\fnt\FontController.cpp" />
+		<Unit filename="src\gfx\spr\AnimatedSprite.cpp" />
+		<Unit filename="src\gfx\spr\Sprite.cpp" />
 		<Unit filename="src\main.cpp" />
-		<Unit filename="src\sys\Supervisor.cpp" />
-		<Unit filename="src\test.cpp" />
 		<Unit filename="src\util\Colour.cpp" />
 		<Unit filename="src\util\Constants.cpp" />
 		<Unit filename="src\util\Utils.cpp" />
 		<Unit filename="src\util\Vector2d.cpp" />
+		<Unit filename="src\world\World.cpp" />
+		<Unit filename="src\world\ent\Entity.cpp" />
+		<Unit filename="src\world\ent\EntityController.cpp" />
+		<Unit filename="src\world\ent\EntityEnums.cpp" />
+		<Unit filename="src\world\ent\act\Actor.cpp" />
+		<Unit filename="src\world\ent\act\char\Healer.cpp" />
+		<Unit filename="src\world\ent\act\char\Rocketman.cpp" />
+		<Unit filename="src\world\ent\act\char\Runner.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
