--- a/SilverOrgn.cbp
+++ b/SilverOrgn.cbp
@@ -6,16 +6,34 @@
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Debug">
+			<Target title="Debug - Windows">
+				<Option platforms="Windows;" />
 				<Option output="bin\Debug\SilverOrgn" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj\Debug\" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
+					<Add directory="C:\MinGW\include" />
 				</Compiler>
+				<Linker>
+					<Add option="-lSDL -lmingw32" />
+					<Add option="-lSDLmain" />
+					<Add option="-lSDL_image" />
+					<Add option="-lSDL_ttf" />
+					<Add option="-lSDL_mixer" />
+					<Add option="-lopengl32" />
+					<Add library="user32" />
+					<Add library="gdi32" />
+					<Add library="winmm" />
+					<Add library="dxguid" />
+					<Add directory="C:\MinGW\lib" />
+					<Add directory="C:\MinGW\bin" />
+				</Linker>
 			</Target>
-			<Target title="Release">
+			<Target title="Release - Windows">
+				<Option platforms="Windows;" />
 				<Option output="bin\Release\SilverOrgn" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj\Release\" />
 				<Option type="1" />
@@ -24,34 +42,88 @@
 					<Add option="-fexpensive-optimizations" />
 					<Add option="-Os" />
 					<Add option="-O3" />
-					<Add option="-static-libgcc -static-libstdc++" />
+					<Add directory="include" />
+					<Add directory="C:\MinGW\include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add option="-lSDL -lmingw32" />
+					<Add option="-lSDLmain" />
+					<Add option="-lSDL_image" />
+					<Add option="-lSDL_ttf" />
+					<Add option="-lSDL_mixer" />
+					<Add option="-lopengl32" />
+					<Add library="user32" />
+					<Add library="gdi32" />
+					<Add library="winmm" />
+					<Add library="dxguid" />
+					<Add directory="C:\MinGW\lib" />
+					<Add directory="C:\MinGW\bin" />
+				</Linker>
+			</Target>
+			<Target title="Debug - Linux">
+				<Option platforms="Unix;Mac;" />
+				<Option output="bin\Debug\SilverOrgn" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\Debug\" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-g" />
+					<Add directory="include" />
+					<Add directory="\usr\include\SDL" />
+				</Compiler>
+				<Linker>
+					<Add option="-lSDLmain" />
+					<Add option="-lSDL" />
+					<Add option="-lSDL_image" />
+					<Add option="-lSDL_ttf" />
+					<Add option="-lSDL_mixer" />
+					<Add option="-lGL" />
+					<Add option="-lGLU" />
+					<Add directory="\usr\lib\x86_64-linux-gnu" />
+					<Add directory="\usr\lib" />
+					<Add directory="\usr\bin" />
+					<Add directory="\usr\lib32\nvidia-current" />
+				</Linker>
+			</Target>
+			<Target title="Release - Linux">
+				<Option platforms="Unix;Mac;" />
+				<Option output="bin\Release\SilverOrgn" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj\Release\" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+				<Compiler>
+					<Add option="-fexpensive-optimizations" />
+					<Add option="-Os" />
+					<Add option="-O3" />
+					<Add directory="include" />
+					<Add directory="\usr\include\SDL" />
+				</Compiler>
+				<Linker>
+					<Add option="-s" />
+					<Add option="-lSDLmain" />
+					<Add option="-lSDL" />
+					<Add option="-lSDL_image" />
+					<Add option="-lSDL_ttf" />
+					<Add option="-lSDL_mixer" />
+					<Add option="-lGL" />
+					<Add option="-lGLU" />
+					<Add directory="\usr\lib\x86_64-linux-gnu" />
+					<Add directory="\usr\lib" />
+					<Add directory="\usr\bin" />
+					<Add directory="\usr\lib32\nvidia-current" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="C:\MinGW\include" />
-			<Add directory="include" />
+			<Add option="-std=gnu++11" />
+			<Add option="-static-libgcc" />
+			<Add option="-static-libstdc++" />
 		</Compiler>
-		<Linker>
-			<Add option="-lSDLmain -lSDL -lSDL_image -lSDL_ttf -lSDL_mixer" />
-			<Add option="-lopengl32" />
-			<Add library="mingw32" />
-			<Add library="SDLmain" />
-			<Add library="SDL.dll" />
-			<Add library="user32" />
-			<Add library="gdi32" />
-			<Add library="winmm" />
-			<Add library="dxguid" />
-			<Add library="C:\MinGW\lib\libopengl32.a" />
-			<Add directory="C:\MinGW\lib" />
-			<Add directory="C:\MinGW\bin" />
-		</Linker>
 		<Unit filename="fonts\04_BITMAP.TTF" />
 		<Unit filename="fonts\sauce8bit.ttf" />
+		<Unit filename="include\ResourceManager.h" />
 		<Unit filename="include\gfx\fnt\Font.h" />
 		<Unit filename="include\gfx\fnt\FontController.h" />
 		<Unit filename="include\gfx\spr\AnimatedSprite.h" />
@@ -64,8 +136,8 @@
 		<Unit filename="include\util\Vector2d.h" />
 		<Unit filename="include\world\World.h" />
 		<Unit filename="include\world\ent\Entity.h" />
-		<Unit filename="include\world\ent\EntityController.h" />
 		<Unit filename="include\world\ent\EntityEnums.h" />
+		<Unit filename="include\world\ent\Supervisor.h" />
 		<Unit filename="include\world\ent\act\Actor.h" />
 		<Unit filename="include\world\ent\act\char\Healer.h" />
 		<Unit filename="include\world\ent\act\char\Rocketman.h" />
@@ -91,6 +163,7 @@
 		<Unit filename="sprites\class\taunt\SniperTauntStrip.png" />
 		<Unit filename="sprites\class\taunt\SoldierTauntStrip.png" />
 		<Unit filename="sprites\class\taunt\SpyTauntStrip.png" />
+		<Unit filename="src\ResourceManager.cpp" />
 		<Unit filename="src\gfx\fnt\Font.cpp" />
 		<Unit filename="src\gfx\fnt\FontController.cpp" />
 		<Unit filename="src\gfx\spr\AnimatedSprite.cpp" />
@@ -102,8 +175,8 @@
 		<Unit filename="src\util\Vector2d.cpp" />
 		<Unit filename="src\world\World.cpp" />
 		<Unit filename="src\world\ent\Entity.cpp" />
-		<Unit filename="src\world\ent\EntityController.cpp" />
 		<Unit filename="src\world\ent\EntityEnums.cpp" />
+		<Unit filename="src\world\ent\Supervisor.cpp" />
 		<Unit filename="src\world\ent\act\Actor.cpp" />
 		<Unit filename="src\world\ent\act\char\Healer.cpp" />
 		<Unit filename="src\world\ent\act\char\Rocketman.cpp" />
