--- a/SilverOrgn.cbp
+++ b/SilverOrgn.cbp
@@ -8,34 +8,37 @@
 		<Build>
 			<Target title="Debug - Windows">
 				<Option platforms="Windows;" />
-				<Option output="bin\Debug\SilverOrgn" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/SilverOrgn" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="include" />
-					<Add directory="C:\MinGW\include" />
+					<Add directory="C:/SDL2-2.0.0/i686-w64-mingw32/include" />
+					<Add directory="C:/boost_1_54_0" />
 				</Compiler>
 				<Linker>
-					<Add option="-lSDL -lmingw32" />
-					<Add option="-lSDLmain" />
-					<Add option="-lSDL_image" />
-					<Add option="-lSDL_ttf" />
-					<Add option="-lSDL_mixer" />
+					<Add option="-lmingw32" />
+					<Add option="-lSDL2main" />
+					<Add option="-lSDL2" />
+					<Add option="-lSDL2_image" />
+					<Add option="-lSDL2_ttf" />
+					<Add option="-lSDL2_mixer" />
 					<Add option="-lopengl32" />
+					<Add option="-shared-libstdc++" />
 					<Add library="user32" />
 					<Add library="gdi32" />
 					<Add library="winmm" />
 					<Add library="dxguid" />
-					<Add directory="C:\MinGW\lib" />
-					<Add directory="C:\MinGW\bin" />
+					<Add directory="C:/SDL2-2.0.0/i686-w64-mingw32/lib" />
+					<Add directory="C:/SDL2-2.0.0/i686-w64-mingw32/bin" />
 				</Linker>
 			</Target>
 			<Target title="Release - Windows">
 				<Option platforms="Windows;" />
-				<Option output="bin\Release\SilverOrgn" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/SilverOrgn" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -43,7 +46,7 @@
 					<Add option="-Os" />
 					<Add option="-O3" />
 					<Add directory="include" />
-					<Add directory="C:\MinGW\include" />
+					<Add directory="C:/MinGW/include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -57,20 +60,20 @@
 					<Add library="gdi32" />
 					<Add library="winmm" />
 					<Add library="dxguid" />
-					<Add directory="C:\MinGW\lib" />
-					<Add directory="C:\MinGW\bin" />
+					<Add directory="C:/MinGW/lib" />
+					<Add directory="C:/MinGW/bin" />
 				</Linker>
 			</Target>
 			<Target title="Debug - Linux">
 				<Option platforms="Unix;Mac;" />
-				<Option output="bin\Debug\SilverOrgn" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/SilverOrgn" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 					<Add directory="include" />
-					<Add directory="\usr\include\SDL" />
+					<Add directory="/usr/include/SDL" />
 				</Compiler>
 				<Linker>
 					<Add option="-lSDLmain" />
@@ -80,16 +83,16 @@
 					<Add option="-lSDL_mixer" />
 					<Add option="-lGL" />
 					<Add option="-lGLU" />
-					<Add directory="\usr\lib\x86_64-linux-gnu" />
-					<Add directory="\usr\lib" />
-					<Add directory="\usr\bin" />
-					<Add directory="\usr\lib32\nvidia-current" />
+					<Add directory="/usr/lib/x86_64-linux-gnu" />
+					<Add directory="/usr/lib" />
+					<Add directory="/usr/bin" />
+					<Add directory="/usr/lib32/nvidia-current" />
 				</Linker>
 			</Target>
 			<Target title="Release - Linux">
 				<Option platforms="Unix;Mac;" />
-				<Option output="bin\Release\SilverOrgn" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/SilverOrgn" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -97,7 +100,7 @@
 					<Add option="-Os" />
 					<Add option="-O3" />
 					<Add directory="include" />
-					<Add directory="\usr\include\SDL" />
+					<Add directory="/usr/include/SDL" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -108,82 +111,81 @@
 					<Add option="-lSDL_mixer" />
 					<Add option="-lGL" />
 					<Add option="-lGLU" />
-					<Add directory="\usr\lib\x86_64-linux-gnu" />
-					<Add directory="\usr\lib" />
-					<Add directory="\usr\bin" />
-					<Add directory="\usr\lib32\nvidia-current" />
+					<Add directory="/usr/lib/x86_64-linux-gnu" />
+					<Add directory="/usr/lib" />
+					<Add directory="/usr/bin" />
+					<Add directory="/usr/lib32/nvidia-current" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-std=gnu++11" />
-			<Add option="-static-libgcc" />
-			<Add option="-static-libstdc++" />
 		</Compiler>
-		<Unit filename="fonts\04_BITMAP.TTF" />
-		<Unit filename="fonts\sauce8bit.ttf" />
-		<Unit filename="include\ResourceManager.h" />
-		<Unit filename="include\gfx\fnt\Font.h" />
-		<Unit filename="include\gfx\fnt\FontController.h" />
-		<Unit filename="include\gfx\spr\AnimatedSprite.h" />
-		<Unit filename="include\gfx\spr\Sprite.h" />
-		<Unit filename="include\util\Colour.h" />
-		<Unit filename="include\util\Constants.h" />
-		<Unit filename="include\util\MacroRepeat.h" />
-		<Unit filename="include\util\ObjectFactory.h" />
-		<Unit filename="include\util\Utils.h" />
-		<Unit filename="include\util\Vector2d.h" />
-		<Unit filename="include\world\World.h" />
-		<Unit filename="include\world\ent\Entity.h" />
-		<Unit filename="include\world\ent\EntityEnums.h" />
-		<Unit filename="include\world\ent\Supervisor.h" />
-		<Unit filename="include\world\ent\act\Actor.h" />
-		<Unit filename="include\world\ent\act\char\Healer.h" />
-		<Unit filename="include\world\ent\act\char\Rocketman.h" />
-		<Unit filename="include\world\ent\act\char\Runner.h" />
-		<Unit filename="sprites\class\CSStrip.png" />
-		<Unit filename="sprites\class\DemomanStrip.png" />
-		<Unit filename="sprites\class\EngineerStrip.png" />
-		<Unit filename="sprites\class\HeavyStrip.png" />
-		<Unit filename="sprites\class\MedicStrip.png" />
-		<Unit filename="sprites\class\PyroStrip.png" />
-		<Unit filename="sprites\class\ScoutStrip.png" />
-		<Unit filename="sprites\class\SniperStrip.png" />
-		<Unit filename="sprites\class\SoldierStrip.png" />
-		<Unit filename="sprites\class\SpyStrip.png" />
-		<Unit filename="sprites\class\special\SandvichStrip.png" />
-		<Unit filename="sprites\class\taunt\DemoTauntStrip.png" />
-		<Unit filename="sprites\class\taunt\EngiTauntStrip.png" />
-		<Unit filename="sprites\class\taunt\HeavyTauntStrip.png" />
-		<Unit filename="sprites\class\taunt\MedicTauntStrip.png" />
-		<Unit filename="sprites\class\taunt\PyroTauntStrip.png" />
-		<Unit filename="sprites\class\taunt\QuoteTauntStrip.png" />
-		<Unit filename="sprites\class\taunt\ScoutTauntStrip.png" />
-		<Unit filename="sprites\class\taunt\SniperTauntStrip.png" />
-		<Unit filename="sprites\class\taunt\SoldierTauntStrip.png" />
-		<Unit filename="sprites\class\taunt\SpyTauntStrip.png" />
-		<Unit filename="src\ResourceManager.cpp" />
-		<Unit filename="src\gfx\fnt\Font.cpp" />
-		<Unit filename="src\gfx\fnt\FontController.cpp" />
-		<Unit filename="src\gfx\spr\AnimatedSprite.cpp" />
-		<Unit filename="src\gfx\spr\Sprite.cpp" />
-		<Unit filename="src\main.cpp" />
-		<Unit filename="src\util\Colour.cpp" />
-		<Unit filename="src\util\Constants.cpp" />
-		<Unit filename="src\util\Utils.cpp" />
-		<Unit filename="src\util\Vector2d.cpp" />
-		<Unit filename="src\world\World.cpp" />
-		<Unit filename="src\world\ent\Entity.cpp" />
-		<Unit filename="src\world\ent\EntityEnums.cpp" />
-		<Unit filename="src\world\ent\Supervisor.cpp" />
-		<Unit filename="src\world\ent\act\Actor.cpp" />
-		<Unit filename="src\world\ent\act\char\Healer.cpp" />
-		<Unit filename="src\world\ent\act\char\Rocketman.cpp" />
-		<Unit filename="src\world\ent\act\char\Runner.cpp" />
+		<Unit filename="fonts/04_BITMAP.TTF" />
+		<Unit filename="fonts/sauce8bit.ttf" />
+		<Unit filename="include/ResourceManager.h" />
+		<Unit filename="include/gfx/fnt/Font.h" />
+		<Unit filename="include/gfx/fnt/FontController.h" />
+		<Unit filename="include/gfx/spr/AnimatedSprite.h" />
+		<Unit filename="include/gfx/spr/Sprite.h" />
+		<Unit filename="include/util/Colour.h" />
+		<Unit filename="include/util/Constants.h" />
+		<Unit filename="include/util/MacroRepeat.h" />
+		<Unit filename="include/util/ObjectFactory.h" />
+		<Unit filename="include/util/Utils.h" />
+		<Unit filename="include/util/Vector2d.h" />
+		<Unit filename="include/world/World.h" />
+		<Unit filename="include/world/ent/Entity.h" />
+		<Unit filename="include/world/ent/EntityEnums.h" />
+		<Unit filename="include/world/ent/Supervisor.h" />
+		<Unit filename="include/world/ent/act/Actor.h" />
+		<Unit filename="include/world/ent/act/char/Healer.h" />
+		<Unit filename="include/world/ent/act/char/Rocketman.h" />
+		<Unit filename="include/world/ent/act/char/Runner.h" />
+		<Unit filename="sprites/class/CSStrip.png" />
+		<Unit filename="sprites/class/DemomanStrip.png" />
+		<Unit filename="sprites/class/EngineerStrip.png" />
+		<Unit filename="sprites/class/HeavyStrip.png" />
+		<Unit filename="sprites/class/MedicStrip.png" />
+		<Unit filename="sprites/class/PyroStrip.png" />
+		<Unit filename="sprites/class/ScoutStrip.png" />
+		<Unit filename="sprites/class/SniperStrip.png" />
+		<Unit filename="sprites/class/SoldierStrip.png" />
+		<Unit filename="sprites/class/SpyStrip.png" />
+		<Unit filename="sprites/class/special/SandvichStrip.png" />
+		<Unit filename="sprites/class/taunt/DemoTauntStrip.png" />
+		<Unit filename="sprites/class/taunt/EngiTauntStrip.png" />
+		<Unit filename="sprites/class/taunt/HeavyTauntStrip.png" />
+		<Unit filename="sprites/class/taunt/MedicTauntStrip.png" />
+		<Unit filename="sprites/class/taunt/PyroTauntStrip.png" />
+		<Unit filename="sprites/class/taunt/QuoteTauntStrip.png" />
+		<Unit filename="sprites/class/taunt/ScoutTauntStrip.png" />
+		<Unit filename="sprites/class/taunt/SniperTauntStrip.png" />
+		<Unit filename="sprites/class/taunt/SoldierTauntStrip.png" />
+		<Unit filename="sprites/class/taunt/SpyTauntStrip.png" />
+		<Unit filename="src/ResourceManager.cpp" />
+		<Unit filename="src/gfx/fnt/Font.cpp" />
+		<Unit filename="src/gfx/fnt/FontController.cpp" />
+		<Unit filename="src/gfx/spr/AnimatedSprite.cpp" />
+		<Unit filename="src/gfx/spr/Sprite.cpp" />
+		<Unit filename="src/main.cpp" />
+		<Unit filename="src/util/Colour.cpp" />
+		<Unit filename="src/util/Constants.cpp" />
+		<Unit filename="src/util/Utils.cpp" />
+		<Unit filename="src/util/Vector2d.cpp" />
+		<Unit filename="src/world/World.cpp" />
+		<Unit filename="src/world/ent/Entity.cpp" />
+		<Unit filename="src/world/ent/EntityEnums.cpp" />
+		<Unit filename="src/world/ent/Supervisor.cpp" />
+		<Unit filename="src/world/ent/act/Actor.cpp" />
+		<Unit filename="src/world/ent/act/char/Healer.cpp" />
+		<Unit filename="src/world/ent/act/char/Rocketman.cpp" />
+		<Unit filename="src/world/ent/act/char/Runner.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
+			<envvars />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
